--- a/expert/static/expert/css/style.css
+++ b/expert/static/expert/css/style.css
@@ -1036,7 +1036,7 @@ span.border-span {
     display: inline-block;
     border: none;
     padding: 2px 10px;
-    background-color: #ffffff;
+    background-color: #f7fdf8;
     color: #3CCD1C;
     font-weight: bold;
     -webkit-border-radius: 0.25em;
