--- a/industry/templates/industry/layouts/comment.html
+++ b/industry/templates/industry/layouts/comment.html
@@ -7,8 +7,7 @@
 </div>
 <div class="section">
     <div class="confirm-request">
-        <p>
-            درخواستی برای انجام پروژه شما از طرف این استاد دریافت شده است.
+        <p class="request">
         </p>
         <div class="button-group">
             <button class="show-resume">مشاهده رزومه</button>
