--- a/expert/templates/expert/layouts/base_layout.html
+++ b/expert/templates/expert/layouts/base_layout.html
@@ -9,6 +9,7 @@
     <title>{% block title %}{% endblock %}</title>
     <link rel="icon" sizes="16*16" href="{% static 'img/circle_logo.png' %}">
     <link rel="stylesheet" href="{% static 'expert/css/pageLoader.css' %}">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -91,7 +92,7 @@
                 <li class="list-group-item text-right {% if request.get_full_path == messages_url %}active{% endif %}">
                     <div>
                         {% if UnseenMessages %}
-                            <span class="new-message">{{UnseenMessages}}</span>
+                            <span class="new-message">{{ UnseenMessages }}</span>
                         {% endif %}
                         <span>پیام ها</span>
                         <span class="fas fa-envelope"></span>
@@ -149,6 +150,7 @@
     </div>
 </div>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 {#<script type="text/javascript" src="{% static 'expert/js/pageLoader.js' %}"></script>#}
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
