--- a/expert/templates/expert/userInfo.html
+++ b/expert/templates/expert/userInfo.html
@@ -104,8 +104,8 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <label for="Uni">دانشگاه محل فعالیت</label>
-                                {{ expert_info_form.university|attr:"id:Uni"|attr:"readonly:True"|attr:"class:w-100" }}
-
+                                {{ expert_info_form.university|attr:"id:Uni"|attr:"class:w-100" }}
+{#attr:"readonly:True"|#}
                                 {#                              <i class="fas fa-plus fa-lg"></i>#}
                                 {#                              <div class="selected_uni"></div>#}
                             </div>
