debug researcher and industry userInfo

--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -109,7 +109,7 @@
                             <p>پیشنهاد می کنیم دست از کار نکشید و با کلیک بر روی</p>
                             <span>
                                                         <i class="fas fa-cog"></i>
-                                                        <span>تنظیمات کاربری</span>
+                                                        <span>اطلاعات کاربری</span>
                                                     </span>
                             <p>رزومه خود را کامل کنید تا در هنگام ارسال درخواست انجام پروژه، صنایع با شناخت
                                 و
