--- a/expert/templates/expert/userInfo.html
+++ b/expert/templates/expert/userInfo.html
@@ -1,7 +1,7 @@
 {% extends "expert/layouts/base_layout.html" %}
 {% load static %}
 {% load widget_tweaks %}
-{% block title %}تنظیمات کاربری{% endblock %}
+{% block title %}اطلاعات کاربری{% endblock %}
 {% block header %}
     <link rel="stylesheet" href="{% static 'expert/css/persian-datepicker.min.css' %}"
           xmlns="http://www.w3.org/1999/html">
@@ -23,7 +23,7 @@
 {% block content %}
     <div class="row">
         <div class="col-12 text-right">
-            <h3 class="h3 border-bottom p-top-15">تنظیمات کاربری</h3>
+            <h3 class="h3 border-bottom p-top-15">اطلاعات کاربری</h3>
         </div>
     </div>
     <div class="row">
