--- a/industry/templates/industry/userInfo.html
+++ b/industry/templates/industry/userInfo.html
@@ -1,12 +1,12 @@
 {% extends "industry/layouts/base_layout.html" %}
 {% load static %}
 {% load widget_tweaks %}
-{% block title %}تنظیمات کاربری{% endblock %}
+{% block title %}اطلاعات کاربری{% endblock %}
 {% block name %}{{ request.user.industryuser.industryform }}{% endblock %}
 {% block content %}
     <div class="row">
         <div class="col-12 text-right">
-            <h3 class="h3 border-bottom p-top-15">تنظیمات کاربری</h3>
+            <h3 class="h3 border-bottom p-top-15">اطلاعات کاربری</h3>
         </div>
     </div>
     <div class="row">
