--- a/researcher/templates/researcher/index.html
+++ b/researcher/templates/researcher/index.html
@@ -104,7 +104,7 @@
                             <p> همچنین با تکمیل رزومه خود از طریق </p>
                             <span>
                                     <i class="fas fa-cog"></i>
-                                    <span>تنظیمات کاربری</span>
+                                    <span>اطلاعات کاربری</span>
                                 </span>
                             <p> می توانید کمک تا اساتید با شناخت و اطمینان بیشتری شما را انتخاب کنند.</p>
                         </div>
