--- a/researcher/templates/researcher/userInfo.html
+++ b/researcher/templates/researcher/userInfo.html
@@ -1,7 +1,7 @@
 {% extends "researcher/layouts/base_layout.html" %}
 {% load static %}
 {% load widget_tweaks %}
-{% block title %}تنظیمات کاربری{% endblock %}
+{% block title %}اطلاعات کاربری{% endblock %}
 {% block header %}
     <link rel="stylesheet" href="{% static 'researcher/css/persian-datepicker.min.css' %}">
     <link rel="stylesheet" href="{% static 'researcher/css/datepicker-style.css' %}">
@@ -16,7 +16,7 @@
 {% block content %}
     <div class="row">
         <div class="col-12 text-right">
-            <h3 class="h3 border-bottom p-top-15">تنظیمات کاربری</h3>
+            <h3 class="h3 border-bottom p-top-15">اطلاعات کاربری</h3>
         </div>
     </div>
     <div class="row">
@@ -192,7 +192,7 @@
                                             <thead>
                                             <tr>
                                                 <td>سمت</td>
-                                                <td>محل خدمت</td>
+                                                <td>نام مجموعه</td>
                                                 <td>شهر</td>
                                                 <td>از سال</td>
                                                 <td>تا سال</td>
