--- a/researcher/templates/researcher/layouts/executive_form.html
+++ b/researcher/templates/researcher/layouts/executive_form.html
@@ -29,7 +29,7 @@
                         </div>
                         <div class='row'>
                             <div class='col-lg-12'>
-                                <label for='workplace'>محل خدمت</label>
+                                <label for='workplace'>نام مجموعه</label>
 
                                 <input type='text' id='workplace' class='w-100' name="place">
                             </div>
