debug researcher Techniques

--- a/expert/templates/expert/layouts/select_techniques.html
+++ b/expert/templates/expert/layouts/select_techniques.html
@@ -27,7 +27,7 @@
                         </div>
                         <div style="position: relative">
                             <input style="margin: 0" type="text" class="w-100" name="" id="add-new-technique"
-                                   placeholder="نام تکنیک">
+                                   placeholder="برای انتخاب نام تکنیک، روی علامت مثبت کلیک کنید">
                         </div>
                     </div>
                     <div class="col-md-4 text-right mbottom-lg-25">
