--- a/researcher/templates/researcher/layouts/add_new_technique.html
+++ b/researcher/templates/researcher/layouts/add_new_technique.html
@@ -10,7 +10,7 @@
                 {% csrf_token %}
                 <div class="row mbottom-lg-25">
                     <div class="col-lg-12">
-                        <label for="technique-name">نام تکنیک</label>
+                        <label for="technique-name">برای انتخاب نام تکنیک، روی علامت مثبت کلیک کنید</label>
                         <input type="text" id="technique-name" name="technique" value="" class="w-100">
                         <button class="select-technique" type="button">
                             <i class="fas fa-plus"></i>
