add info for attaching file to researcher-question

--- a/researcher/templates/researcher/layouts/preview_question.html
+++ b/researcher/templates/researcher/layouts/preview_question.html
@@ -4,14 +4,14 @@
 {% block content %}
     <div class="preview-question">
         <div class="card info-card text-right">
-            <div class="card-header"> سوال پژوهشی </div>
+            <div class="card-header"> سوال پژوهشی</div>
             <div class="inner-card">
                 <div class="row">
                     <div class="col-lg-12">
                         <h6 class="green">{{ question_title }}</h6>
-                            <div>
-                                {{ question | linebreaksbr }}
-                            </div>
+                        <div>
+                            {{ question | linebreaksbr }}
+                        </div>
                     </div>
                 </div>
                 <div class="row">
@@ -19,20 +19,20 @@
                         <div class="question-attach text-left">
                             <ul class="inline-list">
                                 <li class="list-item">
-                                {% if attachment != "" %}
-                                    <a href="{{ attachment.url }}" class="attach-file">
-                                        {% if attach_type == "doc" or attach_type == "docx" %}
-                                            <span class="doc-file"></span>
-                                        {% elif attach_type == "pdf" %}
-                                            <span class="pdf-file"></span>
-                                        {% elif attach_type == "jpg" or attach_type == "jpeg" %}
-                                            <span class="jpg-file"></span>
-                                        {% elif attach_type == "png" %}
-                                            <span class="png-file"></span>
-                                        {% endif %}
-                                        <span>{{ file_name }}</span>
-                                    </a>
-                                {% endif %} 
+                                    {% if attachment != "" %}
+                                        <a href="{{ attachment.url }}" class="attach-file">
+                                            {% if attach_type == "doc" or attach_type == "docx" %}
+                                                <span class="doc-file"></span>
+                                            {% elif attach_type == "pdf" %}
+                                                <span class="pdf-file"></span>
+                                            {% elif attach_type == "jpg" or attach_type == "jpeg" %}
+                                                <span class="jpg-file"></span>
+                                            {% elif attach_type == "png" %}
+                                                <span class="png-file"></span>
+                                            {% endif %}
+                                            <span>{{ file_name }}</span>
+                                        </a>
+                                    {% endif %}
                                 </li>
                             </ul>
                         </div>
@@ -60,14 +60,15 @@
                         </div>
                     </div>
                 </div>
-{#                <div class="row">#}
-{#                    <div class="col-12">#}
-{#                        <div class="progress question-progress">#}
-{#                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"#}
-{#                                 aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
+                {#                <div class="row">#}
+                {#                    <div class="col-12">#}
+                {#                        <div class="progress question-progress">#}
+                {#                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"#}
+                {#                                 aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>#}
+                {#                        </div>#}
+                {#                    </div>#}
+                {#                </div>#}
+                <hr class="m-top-10 mbottom-10">
                 <form method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="row">
@@ -122,6 +123,12 @@
                                     آپلود فایل
                                 </div>
                             </label>
+                            <div class="info-text warning">
+                                <span class="star warning"></span>
+                                <p class="text-right">
+                                    اگر بیش از یک فایل برای بارگذاری در نظر دارید، لطفا به صورت یه فایل RAR بسته‌بندی کنید.
+                                </p>
+                            </div>
                         </div>
                     </div>
                     <div class="row">
